Fix resize behavior (#15)
* Fixed sidebars collapse order + right sidebar as overlay on mobile

* Overlay mode for left sidebar

* 2 configurable right sidebar mode

* Added comment

* Supports panel toggle on touch browsers

* Fixed elements overlapping on small devices

* Fixed tests + better rxjs way of handling overlay mode

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -21,6 +21,10 @@
     width: 285px;
     overflow: hidden;
     flex-shrink: 0;
+
+    &.overlay {
+      position: absolute;
+    }
   }
 
   .content {
