--- a/src/app/documentations/documentations.component.less
+++ b/src/app/documentations/documentations.component.less
@@ -53,12 +53,30 @@
       border-radius: 0;
 
       &.show {
-        .panel-toggle {
-          display: none;
+
+        /* If device not supports hover, then panel toggle is always shown*/
+        @media not all and (hover: none) {
+          .panel-toggle {
+            display: none;
+          }
+        }
+
+        &.overlay-full-height {
+          position: fixed;
+          right: 0;
+          background-color: inherit;
+          /* Workaround: Flexbox fails to handle overlays (position absolute) so I have to make some calculus */
+          height: calc(100% - 75px);
+        }
+
+        &.overlay-partial-height {
+          position: absolute;
+          right: 0;
+          background-color: inherit;
         }
       }
 
-      &:hover {
+      &:hover{
         .panel-toggle {
           border-color: @lightgray;
           display: flex;
